--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 streamlit==1.30.0
 transformers==4.40.0
-torch==1.13.1+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
+onnxruntime==1.16.1
